--- a/time_elicitation_task/templates/time_elicitation_task/Instructions.html
+++ b/time_elicitation_task/templates/time_elicitation_task/Instructions.html
@@ -15,7 +15,7 @@
 {# *** TITLE *** #}
 {# ****************************************************************************************************************** #}
 {% block title %}
-    {% trans "Instructions" %}
+    {% trans "Instrucciones" %}
 {% endblock %}
 
 
